--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "postinstall": "husky install",
-    "lint-cache": "eslint --cache ."
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.4.0",
